# capnp_conv2

./: Cargo.toml  README.md
capnp_conv/: Cargo.toml
capnp_conv/src/: lib.rs
capnp_conv_codegen_req/: Cargo.toml
capnp_conv_codegen_req/src/: lib.rs
capnp_conv_codegen_req/src/codegen_request/: misc.rs  mod.rs  requested_file.rs  source_info.rs
capnp_conv_codegen_req/src/codegen_request/node/: annotation.rs  annotation_node.rs  brand.rs  const_node.rs  enum_node.rs  field.rs  interface.rs  mod.rs  struct_node.rs  types.rs  value.rs
capnp_conv_macros/: Cargo.toml
capnp_conv_macros/src/: generators.rs  models.rs  parsers.rs
capnp_conv_tests/: Cargo.toml
capnp_conv_tests/tests/: test.rs
capnp_conv_tests/tests/common/: common.capnp  common_rust.rs  mod.rs
capnp_conv_tests/tests/optional/: optional_rust.rs
capnp_conv_tests/tests/self_ref/: mod.rs  self_ref.capnp  self_ref_rust.rs
capnp_conv_tests/tests/union_variant/: union_variant_rust.rs
example/: Cargo.toml
example/src/: main.rs  rust_types.rs
