[workspace]
resolver = "2"
members = ["capnp_conv",
    "capnp_conv_codegen_req",
    "capnp_conv_macros",
    "capnp_conv_tests",
    "example"
]

[workspace.package]
authors = ["Richard Stephens <richard@richst.dev>", "Aik Kalantarian <aik.kalantarian@gmail.com>"]
version = "0.5.0-pre.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/richardstephens/capnp_conv2"
readme = "README.md"

[workspace.dependencies]
capnp_conv2 = { path = "capnp_conv", version = "0.5.0-pre.1" }
capnp_conv2_macros = { path = "capnp_conv_macros", version = "0.5.0-pre.1" }

capnp = "0.25"
capnpc = "0.25"
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
