[package]
name = "capnp_conv2"
description = "Provides capnp write/read traits to convert from structs to readers/builders"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
capnp_conv2_macros.workspace = true

capnp.workspace = true
